# pyinla

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE-APACHE  NOTES.md  README.md  genindex.html  index.html  notes.md  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: docs.yml
.github/workflows/: docs.yml
_sources/: index.rst.txt
_sources/examples/: drivers.ipynb.txt  gp.ipynb.txt  hospital.ipynb.txt  jersey_covid.ipynb.txt  malaria.ipynb
docs/: requirements.txt
docs/examples/: gp.ipynb  hospital.ipynb
docs/examples/data/: GMB_msk_alt.gri
docs/source/: conf.py  requirements.txt
docs/source/examples/: jersey_covid.ipynb
docs/source/examples/data/: GMB_msk_alt.grd  jersey_covid_2021-2022.csv  njincome.csv  njpop.csv  njpoverty.csv
examples/: drivers.html  drivers.ipynb  gp.html  gp.ipynb  hospital.html  hospital.ipynb  hospital.py  jersey_covid.html  malaria.html  malaria.ipynb
examples/data/: hospital.csv
pyinla/: convert.py  marginals.py  model.py  raster.py  result.py  spde.py  utils.py
