[tool.poetry]
name = "pyinla"
version = "0.1.0"
description = ""
authors = ["Jeff Shen <shenjeff@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rpy2 = "^3.5.6"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
